Upgrade Hugo from v0.108.0 to v0.156.0
- Rename config.toml to hugo.toml and update highlight config syntax
- Fix all deprecated template APIs (.Data.Pages, .RawContent, $.Scratch,
  .Site.DisqusShortname, .Site.Data, readFile, .Site.LanguagePrefix)
- Add custom gist shortcode to replace removed built-in
- Update footer to display current year dynamically
- Rewrite GitHub Actions workflow for Hugo 0.156.0

--- a/hugo.toml
+++ b/hugo.toml
@@ -77,8 +77,7 @@ url = "/index.xml"
     guessSyntax = false
     hl_Lines = ""
     lineNoStart = 1
-    lineNos = true
-    lineNumbersInTable = true
+    lineNos = "table"
     noClasses = true
     style = "github"
     tabWidth = 4
