Improve dark mode, update site content and layout
- Fix code highlighting in dark mode: switch to CSS classes with dual
  Chroma themes (github light / github-dark) for proper syntax colors
- Add dark mode overrides for embedded GitHub gists
- Eliminate dark mode page flicker with synchronous theme detection
- Fix page layout on About/Tags pages (flex width issue)
- Sticky footer pinned to bottom of viewport
- Update subtitle, About page bio, and link to CV
- Hide All Posts and Tags nav items
- Hide date and title on About page

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,15 +1,15 @@
 baseURL = '/'
 languageCode = 'en-us'
-title = 'Dela Agbenyegah'
+title = 'Kirk Agbenyegah'
 theme = 'ink-free'
-copyright = "© Dela Agbenyegah"
+copyright = "© Kirk Agbenyegah"
 #ignoreErrors = ["error-missing-instagram-accesstoken"]
 
 [permalinks]
   posts = "/:year/:month/:title"
 
 [params]
-	subtitle = "Welcome to my personal space."
+	subtitle = "Shipping software, one hack at a time."
 
 	# Optional 64x64 avatar image.
 	avatar = "https://raw.githubusercontent.com/savekirk/dela.github.io/main/assets/images/me.jpg"
@@ -43,20 +43,20 @@ name = "Home"
 url = "/"
 weight = 1
 
-[[menu.main]]
-name = "All posts"
-url = "/posts"
-weight = 2
+# [[menu.main]]
+# name = "All posts"
+# url = "/posts"
+# weight = 2
 
 [[menu.main]]
 name = "About"
 url = "/about"
 weight = 3
 
-[[menu.main]]
-name = "Tags"
-url = "/tags"
-weight = 4
+# [[menu.main]]
+# name = "Tags"
+# url = "/tags"
+# weight = 4
 
 [[params.social]]
 name = "Github"
@@ -78,8 +78,7 @@ url = "/index.xml"
     hl_Lines = ""
     lineNoStart = 1
     lineNos = "table"
-    noClasses = true
-    style = "github"
+    noClasses = false
     tabWidth = 4
 
   [markup.tableOfContents]
